.nais/grpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippet: |
      grpc_read_timeout 86400s;
      grpc_send_timeout 86400s;
      client_body_timeout 86400s;
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    team: nais
  name: kolide-event-handler-grpc-manual
  namespace: nais
spec:
  ingressClassName: nais-ingress-external
  rules:
  - host: kolide-event-handler.external.prod-gcp.nav.cloud.nais.io
    http:
      paths:
      - backend:
          service:
            name: kolide-event-handler-grpc
            port:
              number: 8081
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy.org/backend-config-snippet: |
      retries 2
      default-server proto h2 no-check
      timeout tunnel 3600s
      # Override default setting of aggressive for GRPC-connections
      http-reuse never
    haproxy.org/timeout-client: 86400s
    haproxy.org/timeout-server: 86400s
  labels:
    team: nais
  name: kolide-event-handler-grpc-haproxy
  namespace: nais
spec:
  ingressClassName: nais-ingress-external
  rules:
    - host: kolide-event-handler.external.prod-gcp.nav.cloud.nais.io
      http:
        paths:
          - backend:
              service:
                name: kolide-event-handler-grpc
                port:
                  number: 8081
            path: /
            pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/app-protocols: '{"https": "HTTP2"}'
  labels:
    app: kolide-event-handler
    team: nais
  name: kolide-event-handler-grpc
  namespace: nais
spec:
  ipFamilies:
  - IPv4
  ports:
  - name: http
    port: 8081
    protocol: TCP
  selector:
    app: kolide-event-handler
  type: ClusterIP
