.nais/grpc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    team: naisdevice
  name: kolide-event-handler-grpc
  namespace: naisdevice
spec:
  ports:
  - name: grpc
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: kolide-event-handler
  type: ClusterIP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    team: naisdevice
  name: kolide-event-handler-grpc
  namespace: naisdevice
spec:
  gateways:
  - istio-system/gw-prod-gcp-nais-io
  hosts:
  - kolide-event-handler.prod-gcp.nais.io
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kolide-event-handler-grpc
        port:
          number: 8081
      weight: 100
